--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,29 @@ body {
   0% {
     top: 150px;
   }
-  30% {
-    top: 130px;
+  15% {
+    top: 135px;
+  }
+  35% {
+    top: 115px;
+  }
+  45% {
+    top: 100px;
   }
   50% {
     top: 80px;
   }
-  80% {
-    top: 130px;
+  50% {
+    top: 90px;
+  }
+  65% {
+    top: 100px;
+  }
+  75% {
+    top: 120px;
+  }
+  85% {
+    top: 135px;
   }
   100% {
     top: 150px;
